# Wolfram

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: Ui.hpp.8DC0D0FC71A903E2.idx  VulkanHelper.hpp.9D972201575E6E26.idx  Wolfram.h.6E3350D4214B4F66.idx  Wolfram.h.9914F535D2659B16.idx  _fixes.hpp.19BE892F5E52C1F1.idx  _fixes.hpp.4EA539C3EB3666C7.idx  _vectorize.hpp.7D1647EAFA530396.idx  _vectorize.hpp.8F032D9519967FE3.idx  cleanupswapchain.hpp.32A0A820748144D7.idx  common.hpp.13B86361885074AF.idx  common.hpp.8B0A5027CB71993D.idx  compute_common.hpp.335ED2CAAB4FC397.idx  compute_common.hpp.E4F2D4253049CDA7.idx  compute_vector_relational.hpp.EC2902505809CB3D.idx  compute_vector_relational.hpp.F63CEE87A5EC5511.idx  constants.hpp.09F22FC049A74B58.idx  constants.hpp.BB7AB539F012CA58.idx  constants.inl.3A0B3E24A890A4A4.idx  constants.inl.A0482ADC4A781220.idx  context.c.82AB850D7A3F66CE.idx  context.c.F3723D890B823327.idx  createUi.cpp.FFB60CF2DF847860.idx  dual_quaternion.hpp.3928D302258F127C.idx  dual_quaternion.hpp.A9A4F6146843743E.idx  dual_quaternion.inl.0C24C1C8BDBD8E8D.idx  dual_quaternion.inl.E0E70785A3F9F3F4.idx  egl_context.c.5F89367A6888C3DC.idx  egl_context.c.CE232057BF06393B.idx  entt.hpp.52EB6C682C5DDE20.idx  entt_registry.cpp.DFABD9457B72F748.idx  epsilon.hpp.15DAED1746705D00.idx  epsilon.hpp.30E610BA96E65307.idx  epsilon.inl.6DFAB98FF537ED50.idx  epsilon.inl.A47BD36F37EA8720.idx  exponential.hpp.515A86B998F862ED.idx  exponential.hpp.DB650E91354AC453.idx  func_common.inl.23F657AF0B323746.idx  func_common.inl.7E45FAF82920E1A0.idx  func_exponential.inl.969559FA277CB0B1.idx  func_exponential.inl.B15FF6BEF737016F.idx  (+446 more)
resources/models/: skybox.mtl  viking_room.mtl
resources/shaders/: compile.bat  compile.sh  shader.vert  vert.spv
src/: CMakeLists.txt  Wolfram.h  init.cpp  main.cpp  model_loader.h
src/UI/: Ui.hpp
src/engine/: VulkanHelper.hpp
src/engine/camera/: updateMovement.hpp
src/engine/models/: model_loader.hpp  updateUniform.hpp
src/engine/swapchain/: cleanupswapchain.hpp
src/engine/textures/: stb_image.h  textureImage.hpp
src/variables/: entt_registry.cpp  entt_registry.hpp  variables.hpp
